# presale-auto-python

./: .gitignore  .prettierrc  README.md  conftest.py  global-teardown.ts  otp.json  package-lock.json  package.json  playwright.config.b2c.ts  playwright.config.ts  pyproject.toml  refactor-valodators.ts  requirements.txt  table-component.json  table-row-component.json  table.ts  test-results.json
.github/workflows/: auto-monitor.yml  e2e-product-monitor.yml
config/: config.py  config.ts  retry-config.ts  tsconfig.json
tests/b2b/api/auth/: auth.spec.ts
tests/b2b/e2e/: registration.e2e.spec.ts
tests/b2c/api/auth/: auth.spec.ts
tests/b2c/api/catalog/: catalog.spec.ts
tests/b2c/api/lots/: lots.spec.ts
tests/b2c/api/product/: create-product.spec.ts  e2e-product-flow.spec.ts  get-product-screen.spec.ts
tests/data/: test-data.ts  test-users.ts
tests/data/constants/: auth.endpoints.ts  catalog.endpoints.ts  index.ts  lots.endpoints.ts  media.endpoints.ts  products.endpoints.ts  profile.endpoints.ts
tests/data/types/: lots.ts
tests/fixtures/: b2b-auth-context.ts  b2c-auth-context.ts  db.ts  test-setup.ts
tests/fixtures/api-clients/: b2b-bff-client.ts  b2b-dml-client.ts  b2c-api-client.ts  base-api-client.ts
tests/utils/: db-retry-utils.ts  helpers.ts  retry-utils.ts  validators.ts
tests/utils/generators/: data-generators.ts  product-generator.ts  random-shop-generator.ts
tests/utils/telegram/: telegram-notifier.ts
tests/utils/validators/catalog/: catalog-main-man.ts  catalog-main-woman.ts  category-L3.ts  category-L4.ts  category.ts
tests/utils/validators/lots/: lots-active-list.validator.ts  lots-active.validator.ts  lots-history-list.validator.ts  lots-history.validator.ts  my-lots.validator.ts  product-list.validator.ts  products-draft.validator.ts
tests/utils/validators/notifications/: notifications-screen.validator.ts
tests/utils/validators/product-validators/: addresses-list.validator.ts  brands.validator.ts  categories.validator.ts  color.validator.ts  complete-set.validator.ts  material.validator.ts  payments-cards-list.validator.ts  price-calculate.validator.ts  product-description.validator.ts  product-images.validator.ts  product-info.validator.ts  (+6 more)
(+14 files in other folders)
